#35 - width and gap fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,7 @@ body {
 	margin: 0 auto;
 	display: block;
 	padding-top: 100px;
+	max-width: 100%;
 }
 
 .desc-limit{
